zad1/pod-mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: my-sql
  name: my-sql
  namespace: backend
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: role
                operator: In
                values:
                  - backend
  containers:
  - env:
    - name: MYSQL_ROOT_PASSWORD
      value: root
    image: mysql
    name: my-sql
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
