zad1/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend-svc
  namespace: frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend
  type: NodePort
status:
  loadBalancer: {}
