zad1/svc-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: my-sql
  name: mysql-svc
  namespace: backend
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    run: my-sql
  type: ClusterIP
status:
  loadBalancer: {}
